scrollbar-logic done , need to fixed bug at ScrollLogic dropScroll method

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -18,6 +18,7 @@ body
     height: 100%
     font-family: 'Roboto', sans-serif
     height: 100vh
+    overflow: hidden
 
 #app
     height: 100%
