--- a/src/sass/scrollbar.sass
+++ b/src/sass/scrollbar.sass
@@ -13,5 +13,7 @@
     background: #fff
     border-radius: 5px
     cursor: pointer
+    position: absolute
+    z-index: 1000
     &:hover
         background: #ccc
